user create, login etc. working; create note working.